docs: rename macOS arm64 target

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
             target: linux-arm64-glibc
             ext: ""
           - os: macos-14
-            target: macos-arm64
+            target: macos-silicon
             ext: ""
           - os: macos-13
             target: macos-intel
