--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,6 +16,6 @@ jobs:
         uses: mhausenblas/mkdocs-deploy-gh-pages@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CONFIG_FILE: docs-site/mkdocs.yml
-          MKDOCS_BUILD_DIR: docs-site
+          CONFIG_FILE: docs/mkdocs.yml
+          MKDOCS_BUILD_DIR: docs
 
